# proxy-server

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
1,2 tasks/: 1.py  2.py
api/: admin.py  models.py
integration/logic/: schemas.py
integration/logic/sources/: first_source.py  second_source.py
proxy/proxy/: asgi.py  settings.py  urls.py  wsgi.py
src/: .env-example
src/api/: admin.py  models.py  serializers.py  urls.py  views.py
src/api/migrations/: 0001_initial.py  0002_remove_fuel_currency_stationfuel_currency.py  0003_remove_stationfuel_fuel_stationfuel_icon_and_more.py
src/integration/: tasks.py
src/integration/logic/: __init__.py  schemas.py
src/integration/logic/sources/: first_source.py  second_source.py
src/proxy/: __init__.py  asgi.py  celery.py  settings.py  wsgi.py
