[tool.poetry]
name = "proxy-server"
version = "0.1.0"
description = "Proxy-server to unit various sources"
authors = ["Aibulat Notfullin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.2.0"
django = "^4.1.7"
celery = "^5.2.7"
faker = "^18.3.1"
psycopg2-binary = "^2.9.5"
pillow = "^9.4.0"
django-environ = "^0.10.0"
django-celery-beat = "^2.5.0"
djangorestframework = "^3.14.0"
gunicorn = "^20.1.0"
redis = "^4.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
